--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,8 @@ swiper-slide {
 }
 
 #sideNavDesktop {
+    transform: scale(0.8);
+
     display: none;
     opacity: 0;
 
@@ -1342,7 +1344,7 @@ ul {
 .gridContainer {
     display: grid; 
     grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
+    grid-template-rows: 1fr 1fr 0.5fr; 
     gap: 0px 180px; 
     grid-template-areas: 
     "formations hobbys"
@@ -2199,7 +2201,7 @@ ul {
 
 .lienBJJ {
     position:relative; 
-    margin: 46px auto 60px auto;
+    margin: 46px auto 0px auto;
     color:#E7E8F2; 
     text-align:center; 
     font-size:1.3em; 
@@ -2351,7 +2353,7 @@ ul {
 }
 
 #projectContainer {
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
 }
 
 .demoVideo {
@@ -2445,11 +2447,11 @@ ul {
     align-items: center;
     gap: 5px;
 
-    margin-bottom: 45px;
+    /* margin-bottom: 45px; */
 }
 
 .linkedinBtn {
-    padding: 17px 12px 16px 12px;
+    padding: 13px 12px 12px 12px;
     font-size: 1.5em;
     color: #0e0e0e;
     border: 1px solid #121212;
