--- a/views/accueil.html
+++ b/views/accueil.html
@@ -126,7 +126,7 @@
             <!-- (Desktop) Lors scroll: sideNav -->
             <ul id="sideNavDesktop">
                 <li class="sideNavDesktop sideNavDesktopActif">
-                    <a href="accueil.html">
+                    <a href="accueil.html" style="position:relative; right:2px;">
                         <i class="fa-solid fa-house desktopNavAccueil desktopNavAccueilActif"></i>
                         <span class="desktopNavSpan desktopSpanActif">Accueil</span>
                     </a>
@@ -366,7 +366,7 @@
                     <!-- <div class="accueilGrid2"> -->
 
                         <!-- form https://enjoy.plezi.co -->
-                        <div style="position:relative;">
+                        <div class="contactBtnDiv" style="position:relative;">
                             <div id="contactBtnFade">
                                 <button id="contactButton">
                                     <i class="fa-regular fa-paper-plane"></i>
