--- a/views/cv.html
+++ b/views/cv.html
@@ -51,7 +51,7 @@
         <!-- (Desktop) Lors scroll: sideNav -->
         <ul id="sideNavDesktop">
             <li class="sideNavDesktop">
-                <a href="accueil.html">
+                <a href="accueil.html" style="position:relative; right:2px;">
                     <i class="fa-solid fa-house desktopNavAccueil notActifNavDesktop"></i>
                     <span class="desktopNavSpan">Accueil</span>
                 </a>
