--- a/views/loisirs.html
+++ b/views/loisirs.html
@@ -52,7 +52,7 @@
         <!-- (Desktop) Lors scroll: sideNav -->
         <ul id="sideNavDesktop">
             <li class="sideNavDesktop">
-                <a href="accueil.html">
+                <a href="accueil.html" style="position:relative; right:2px;">
                     <i class="fa-solid fa-house desktopNavAccueil notActifNavDesktop"></i>
                     <span class="desktopNavSpan">Accueil</span>
                 </a>
@@ -70,7 +70,7 @@
                 </a>
             </li>
             <li class="sideNavDesktop sideNavDesktopLoisirs sideNavDesktopActif">
-                <a href="loisirs.html">
+                <a href="loisirs.html" style="position:relative; left:2px;">
                     <img src="../img/navBurgerImg/nav_loisirs_blue.png" class="desktopNavLoisirs" />
                     <span class="desktopNavSpan desktopSpanActif">Loisirs</span>
                 </a>
