--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,7 @@ swiper-slide {
 
     z-index: 99999;
     position: fixed;
+    top: -20px;
 
     border-left: 1px solid rgba(128, 128, 128, 0.3);
     transition: all 0.25s;
@@ -3384,7 +3385,7 @@ ul {
         height: 110px;
     }
     50% {
-        transform: translate(310px, -50%);
+        transform: translate(80px, -50%);
         height: 145px;
     }
     100% {
@@ -6441,7 +6442,7 @@ li.veilleLigneAjout::before {
 }
 
 .githubProjectLink {
-    border: 1px solid var(--secondaryColorVeryMat);
+    border: 2px solid var(--secondaryColorVeryMat);
     padding: 2px 10px;
     font-size: 0.95em;
     border-radius: 4px;
