--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -326,6 +326,8 @@
     }
 
     #pageContainerProjet {
+        margin-top: 17px !important;
+
         background-size: cover;
         background-repeat: no-repeat;
         height: fit-content;
@@ -361,9 +363,9 @@
 
     #dlCv {
         background-color: var(--secondaryColor);
-        font-size: 0.65em;
+        font-size: 0.6em;
         gap: 3px;
-        padding: 6px 11px 4px 9px;
+        padding: 4px 11px 2px 9px;
         margin-right: 20px;
     }
 
@@ -733,6 +735,8 @@
         margin-block-start: 0.2em !important;
     }
     #portfolioSousTitre {
+        display: none;
+
         margin-block-end: 0.5em;
         margin-block-start: 0;
 
@@ -956,7 +960,7 @@
         filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.582)) !important;
 
         font-size: 2.15em;
-        padding: 2px 0px 0px 15px;
+        padding: 5px 0px 0px 15px !important;
 
         /* Danger */
         margin-bottom: -8px;
@@ -964,6 +968,15 @@
     /* HYPER IMPORTANT ICI: */
     .testHeader {
         display: block;
+    }
+
+    .testH1-pluba {
+        padding: 7px 0px 0px 15px !important;
+    }
+
+
+    .pageContainerCv {
+        margin-top: 17px !important;
     }
 
     .testProjetTitle {
@@ -1096,6 +1109,8 @@
     }
 
     .stageBandeau {
+        font-size: 90% !important;
+
         text-align: left;
         /* background: linear-gradient(85deg, rgba(66,66,66,0) 5%, rgba(239,59,45,0.34441526610644255) 50%, rgba(66,66,66,0) 95%); */
         background: rgba(239,59,45,0.2);
@@ -1104,8 +1119,8 @@
         background: linear-gradient(90deg, rgba(239,59,45,0.2) 0%, rgba(255,255,255,0) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ef3b2d",endColorstr="#ffffff",GradientType=1);
 
-        border-left: 1px solid #ef3b2d;
-        padding-left: 15px;
+        border-left: 1px solid #ef3b2d8f;
+        padding-left: 8px;
     }
 
     .cvSectionBgGradient {
@@ -1263,7 +1278,7 @@
         transform: translate(140px, -66px);
 
         /* Apparemment pas besoin d'attendre la fin du drawing */
-        animation: poissonHobbies 3s 0s linear infinite;
+        animation: poissonHobbies 3.7s 0s linear infinite;
     }
     @keyframes poissonHobbies {
         0% {
@@ -1290,7 +1305,7 @@
     .hobbiesSvgPath {
         opacity: 0.9;
 
-        animation: fillScintillement 3s 3s linear infinite;
+        animation: fillScintillement 3.5s 3.5s linear infinite;
     }
     @keyframes fillScintillement {
         0% {
@@ -1303,7 +1318,7 @@
             fill: rgba(255, 255, 255, 0.04); 
         } */
         50% {
-            fill: rgba(255, 255, 255, 0.09); 
+            fill: rgba(255, 255, 255, 0.08); 
         }
         /* 53% {
             fill: rgba(255, 255, 255, 0.04); 
@@ -1538,7 +1553,7 @@
         /* border: 1px solid grey; */
         padding: 9px 12px;
         border-radius: 25px;
-        background-color: #191b25;
+        background-color: #2e2f33;
         z-index: 999;
 
         transition: 0.4s;
@@ -1830,6 +1845,8 @@
         transition: all 0.5s;
     }
     #pageContainerProjet {
+        margin-top: 17px !important;
+
         transition: all 0.5s;
     }
 
@@ -1884,10 +1901,10 @@
     
     .testPopPortraitImg {
         width: 97px;
-        height: 97px;
+        height: 93px;
         position: relative;
-        top: 3px;
-        left: 0px;
+        top: 7px;
+        left: -1px;
     }
 
 
