--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -196,6 +196,12 @@
         margin-block-end: 0;
     }
 
+
+    .accueilGridPresentation {
+        width: 90%;
+        /* margin: 0px auto; */
+    }
+
     .imgAccueil { 
         /* width: 180px;
         height: 195px;
@@ -207,11 +213,15 @@
 
         position: relative;
         bottom: -1px;
+        left: 29px;
+        transform: scale(0.94);
     }
+
+
 
     .fixScalePortraitPC {
         position: relative;
-        transform: scale(0.90);
+        transform: scale(0.85);
         left: 22px;
     }
 
@@ -219,6 +229,11 @@
         margin-block-start: 0;
         font-size: 1.25em;
         margin-block-end: 0.6em;
+
+        margin-left: 24px;
+        padding-left: 22px;
+        color: #ef3b2d;
+        border-left: 1px solid #19ddbc6e;
     }
 
     @keyframes bandeauGrowShrink {
@@ -647,7 +662,7 @@
     /* à rename: */
     .testH1 {
         font-size: 3em;
-        padding: 12px 0px 1px 3%;
+        padding: 5px 0px 1px 28px;
 
     }
     #NavBarContainer {
@@ -715,9 +730,9 @@
 
     .testPopPortraitImg {
         width: 185px;
-        height: 185px;
+        height: 178px;
         position: relative;
-        top: 8px;
+        top: 14px;
     }
 
     .accueilProjectsDiv {
