--- a/css/style.css
+++ b/css/style.css
@@ -1374,7 +1374,7 @@ ul {
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 1fr 1fr 0.5fr; 
-    gap: 0px 180px; 
+    gap: 0px 80px; 
     grid-template-areas: 
     "formations hobbys"
     "langages langages"
@@ -1390,7 +1390,7 @@ ul {
 }
 .hobbys { grid-area: hobbys; }
 .langages { grid-area: langages;
-    bottom: 65px; 
+    bottom: 175px; 
     margin-bottom: 50px;
  }
 .outils { grid-area: outils; }
@@ -1941,7 +1941,7 @@ ul {
     margin-right:2%;
 
     z-index: 2;
-    top: 12px;
+    top: 4px;
 }
 
 .menuButton {
@@ -1987,6 +1987,9 @@ ul {
     position: relative;
     opacity: 0;
 
+    top: 9px;
+    left: 35px;
+
     animation: fadeIn 0.6s 0.7s ease forwards;
     transition: all 0.4s;
 }
@@ -2020,7 +2023,7 @@ ul {
 }
 
 .githubLogo {
-    width: 70px;
+    width: 55px;
     position: absolute;
     transform: rotate(352deg);
     opacity: 1;
@@ -2349,14 +2352,17 @@ ul {
 }
 
 #portfolioSousTitre {
+    position: relative;
+    bottom: 5px;
+
     margin-block-start: 0;
     font-size: 1.2em;
     margin-block-end: 0.55em;
 
-    margin-left: 24px;
-    padding-left: 22px;
+    margin-left: 18px;
+    padding-left: 18px;
     color: #ef3b2d;
-    border-left: 1px solid #19ddbc78;
+    border-left: 2px solid #19ddbc36;
 }
 
 
@@ -3239,7 +3245,8 @@ ul {
 
 
 .paragrapheAccueil { 
-    text-align: justify;
+    /* text-align: justify; */
+    text-align: left;
     color: #E7E8F2;
     margin: 0px 20px 12px 20px;
     
