--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -41,10 +41,10 @@
         left: 7px;
         top: 9px;
     
-        width: 1px;
+        width: 2px;
         height: -webkit-fill-available;
     
-        background-color: #ef3b2d30;
+        background-color: #ef3b2d75;
     
         border-radius: 7px;
     
@@ -206,6 +206,9 @@
     }
 
     .paragrapheAccueil { 
+
+        text-align: justify;
+
         font-size: 1.05em;
         margin: 0px 7px 12px 7px;
         margin-bottom: 20px !important;
@@ -275,7 +278,7 @@
     }
 
     #photographieTitle {
-        margin-top: 45px;
+        margin-top: 30px;
         font-size: 2.5em;
         -webkit-box-reflect: below -4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white));
         /* opacity: 0;
@@ -574,11 +577,15 @@
 
 
     .smileSvgContainer {
-        right: -10px;
-        bottom: -11px;
+        right: -15px;
+        bottom: -12px;
         height: 25px;
         width: 62px;
         transform: scale(0.8);
+    }
+
+    #smilePath {
+        transform: translateX(0px) rotateY(47deg);
     }
 
     #sideNavDesktop {
@@ -735,19 +742,25 @@
         margin-block-start: 0.2em !important;
     }
     #portfolioSousTitre {
-        display: none;
+        /* display: none !important; */
+        font-size: 0.82em !important;
+        line-height: 1.11em !important;
+        display: inline-flex;
+        flex-direction: column;
 
         margin-block-end: 0.5em;
         margin-block-start: 0;
 
-        font-size: 1.1em !important;
         position: relative;
         bottom: 0em;
 
-        margin-left: 24px !important;
+        margin-left: 8px !important;
+        padding-left: 8px !important;
         color: #ef3b2d;
         position: relative;
-        bottom: 3px;
+        bottom: 12px;
+
+        border-left: 1px solid #19ddbc4f;
 
         /* Pour espace smile: */
         margin-top: 5px;
@@ -893,12 +906,12 @@
         animation: rotateGithubText 2.5s ease-in-out infinite;
     }
     .githubLogo {
-        width: 52px;
+        width: 50px;
         position: absolute;
         transform: rotate(354deg);
-        opacity: 0.93;
-        top: 51px;
-        left: 10px;
+        opacity: 0.96;
+        top: 36px;
+        left: -23px;
 
         animation: rotateGithubLogo 2.5s ease-in-out infinite;
     }
@@ -937,18 +950,21 @@
         bottom: 175px;
     }
 
+    .smilePathResp {
+        transform: translateX(0px) rotateY(45deg) !important;
+    }
+
 
     .pageTitle {
         text-decoration-thickness: 2px;
 
         margin-block-start: 0.5em;
         margin-block-end: 0.3em;
-        font-size: 1.75em;
+        font-size: 1.65em;
 
         text-decoration-color: rgb(239 59 45 / 92%);
     }
 
-    /* #portfolioSousTitre { */
 
 
     .homeIconFa {
@@ -959,8 +975,8 @@
     .testH1 {
         filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.582)) !important;
 
-        font-size: 2.15em;
-        padding: 5px 0px 0px 15px !important;
+        font-size: 2.1em;
+        padding: 0px 0px 0px 10px !important;
 
         /* Danger */
         margin-bottom: -8px;
@@ -971,12 +987,18 @@
     }
 
     .testH1-pluba {
-        padding: 7px 0px 0px 15px !important;
+        padding: 0px 0px 0px 10px !important;
+    }
+
+    .testH1mobile {
+        font-size: 2em !important;
+        padding: 3px 0px 0px 16px !important;
+        margin-bottom: -8px;
     }
 
 
     .pageContainerCv {
-        margin-top: 17px !important;
+        margin-top: -6px !important;
     }
 
     .testProjetTitle {
@@ -1478,6 +1500,10 @@
     }
 
 
+    .hobbys {
+        position: relative;
+        bottom: 52px;
+    }
 
     .docAdminGrid {
         display: grid; 
@@ -1742,15 +1768,16 @@
     }
 
     .outils {
-        bottom: 60px;
+        bottom: 95px;
     }
     .langues {
-        bottom: 65px;
+        bottom: 70px;
     }
 
     /* GRID COMPETENCES */
     .langages {
-        margin-top: 4px;
+        bottom: 102px; 
+        margin-top: 0px;
         /* margin-top: 50px; */
     }
     .gridCompetences {  
@@ -1877,7 +1904,7 @@
         height: 101px;
         margin: 4px 10px 10px 18px;
 
-        padding: 2px 2px 2px 2px;
+        padding: 2px 2px 2px 8px;
         left: -14px;
         animation: imgAccueilFadeIn 2s 1.8s ease forwards;
 
@@ -1904,7 +1931,7 @@
         height: 93px;
         position: relative;
         top: 7px;
-        left: -1px;
+        left: -6px;
     }
 
 
@@ -2739,6 +2766,8 @@
     .sidenav {
         z-index: 9999;
 
+        border-top-left-radius: 12px;
+
         height: 100vh;
         width: 255px;
         position: fixed;
@@ -2752,7 +2781,7 @@
 
         padding-top: 83px;
         transition: right 0.5s ease;
-        border-left: 1px solid #80808024;
+        border-left: 1px solid #19ddbc3b;
     }
     .sidenav[data-theme="light"] {
         background-color: #0c4454;
@@ -2824,8 +2853,8 @@
     #openBtn {
         filter: drop-shadow(1px 2px 3px black);
         position: absolute;
-        right: 15px;
-        top: 14px;
+        right: 9px;
+        top: 8px;
         width: 44px;
         height: 59px;
         z-index: 9999;
