--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -108,7 +108,7 @@
     }
 
     .projectSlideLogo {
-        transform: scale(9);
+        transform: scale(6);
         position: relative;
         left: 117px;
         width: 48px;
@@ -116,6 +116,8 @@
 
     .iframe {
         margin-right: 55px;
+
+        bottom: 50px;
         /* Marche: (sans le rotate 3D) */
     
         transform: perspective(1220px) rotateY(83deg) translateX(35px) scale(0.8);
@@ -139,26 +141,33 @@
 
     .smileSvgContainer {
         position: absolute;
-        right: 0px;
+        right: -4px;
         bottom: -10px;
         height: 25px;
         width: 62px;
     }
     .smileSvgContainerResp {
-        right: -10px !important;
+        right: -5px !important;
     }
 
     #smilePath {
-        transform : translateX(0px) rotateY(20deg);
+        transform : translateX(0px) rotateY(36deg);
         transition: all 0.4s;
     }
     .smilePathResp {
         transform: translateX(0px) rotateY(45deg) !important;
     }
 
+    #projectContainer {
+        /* padding-bottom: 40px; */
+        position: relative;
+        bottom: 4px;
+    }
+
+
     .description {
         position: relative;
-        top: 7px;
+        top: -10px;
 
         border: 0px solid var(--secondaryColor);
         font-size: 90%;
@@ -198,6 +207,8 @@
 
     #menuLigneCv {
         font-size: 1.35em;
+
+        margin-block-start: 0.3em;
     }
 
     .symfonyShapeDiv {
@@ -243,12 +254,15 @@
         margin-block-start: 0;
         font-size: 1.25em;
         margin-block-end: 0.6em;
+        line-height: 1.2em;
+
+        bottom: 18px;
 
 
         margin-left: 18px;
         padding-left: 18px;
         color: #ef3b2d;
-        border-left: 2px solid #19ddbc36;
+        border-left: 1px solid #19ddbc57;
     }
 
     @keyframes bandeauGrowShrink {
@@ -363,9 +377,19 @@
         width: 57px;
       }
 
+      #sideNavDesktop {
+        transform: scale(0.85);
+      }
 
     .pageTitle {
+        margin-top: 40px;
+        margin-bottom: 36px;
         font-size: 2.3em;
+    }
+
+    .pageTitleAccueil {
+        margin-top: 14px !important;
+        margin-bottom: 42px;
     }
 
     .photosGallerie {
@@ -709,6 +733,8 @@
     .projetFuncList {
         font-size: 0.8em;
         margin-block-start: 0.4em;
+
+        min-width: 503px;
     }
 
     #traitHeader {
@@ -734,19 +760,57 @@
         background-repeat:no-repeat;
         height: fit-content;
         /* margin: 2% 12%; */
-        margin: 5px 12%;
+        margin: 0px 12%;
     }
 
 
     .gridProjetHeaderContainer {
-        gap: 60px;
+        gap: 30px;
         /* margin-top: 40px; */
-        margin-top: 25px;
+        margin-top: 0px;
         justify-content: center;
 
         right: 25px;
 
         width: 75%;
+    }
+
+
+    @keyframes fadeInFormation {
+        from {
+            left: -500px;
+            opacity: 0;
+    
+        }
+        to {
+            left: 0px;
+            opacity: 1;
+        }
+    }
+    
+    @keyframes fadeInHobbys {
+        from {
+            right: -500px;
+            opacity: 0;
+    
+        }
+        to {
+            right: -12px;
+            opacity: 1;
+        }
+    }
+
+    .hobbys {
+        top: 11px;
+        right: -12px;
+    }
+
+    #titleCv { 
+        margin-block-end: 1em;
+    }
+
+    .alertSeekDesktopWrap {
+        margin: 6px 0px;
     }
 
     .accueilKeyboardPngDesktop {
