--- a/css/style2.css
+++ b/css/style2.css
@@ -2299,7 +2299,7 @@ ul {
     z-index: 9999;
     filter: drop-shadow(10px 17px 8px black);
     position: relative;
-    bottom: 89px;
+    bottom: 100px;
     text-align: center;
 
     grid-area: iframe; 
@@ -2312,7 +2312,7 @@ ul {
     animation-delay: 0.5s;
     animation-fill-mode: forwards; */
 
-    transform: perspective(1220px) rotateY(83deg) translateX(35px) scale(0.65);
+    transform: perspective(1220px) rotateY(83deg) translateX(35px) scale(0.7);
 
     animation: fadeInRotateIframe 2s 0.5s ease forwards !important;
 }
@@ -2320,11 +2320,11 @@ ul {
 @keyframes fadeInRotateIframe {
     from {
         opacity: 0;
-        transform: perspective(1220px) rotateY(83deg) translateX(35px) scale(0.65);
+        transform: perspective(1220px) rotateY(83deg) translateX(35px) scale(0.7);
     }
     to {
         opacity: 1;
-        transform: perspective(1220px) rotateY(0deg) translateX(35px) scale(0.65);
+        transform: perspective(1220px) rotateY(0deg) translateX(35px) scale(0.7);
     }
 }
 
@@ -3337,6 +3337,7 @@ ul {
 
 
 .imgAccueil { 
+    overflow: hidden;
     /* MAJ 01/02/2024 */
     /* background-color: #ef3b2d; */
     background: rgba(239,59,45);
@@ -3402,18 +3403,44 @@ ul {
 }
 
 
-.pageContainerProjet {
-
-}
-
-
 
 .testPopPortraitImg {
     width: 147px;
     height: 141px;
     position: relative;
-    top: 16px;
+    /* top: 16px; */
+    top: 210px;
     left: 3px;
+
+    animation: popPortrait1 2s 1s ease forwards, popPortrait2 1.5s 3s ease forwards, popPortrait3 1.5s 4.5s ease forwards;
+}
+
+@keyframes popPortrait1 {
+    0% {
+        top: 210px;
+    }
+    50% {
+        top: 77px;
+    }
+    100% {
+        top: 77px;
+    }
+}
+@keyframes popPortrait2 {
+    from {
+        top: 77px;
+    }
+    to {
+        top: 210px;
+    }
+}
+@keyframes popPortrait3 {
+    from {
+        top: 210px;
+    }
+    to {
+        top: 14px;
+    }
 }
 
 .accueilProjectsDiv {
