--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -162,6 +162,9 @@
         /* padding-bottom: 40px; */
         position: relative;
         bottom: 4px;
+
+        /* Pour compenser les relative qui mess le footer */
+        padding-bottom: 67px; 
     }
 
 
@@ -185,6 +188,13 @@
         float: none;
         right: 0px;
         top: 13px;
+    }
+
+    .projectSlideLogo3 {
+        transform: scale(5.5);
+        position: relative;
+        left: 94px !important;
+        width: 69px !important;
     }
 
     #underlineCV {
