--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -124,10 +124,16 @@
     }
 
 
+    .mainSkill {
+        box-shadow: 0 0 17px -1px #00ffff9c;
+        border: 1px solid var(--secondaryColor) !important;
+    }
+
+
     .swipeSymbol {
         position: absolute;
         right: 5%;
-        top: -25px;
+        top: -17px;
         font-size: 0.7em;
         color: var(--secondaryColorVif);
         display: flex;
@@ -139,16 +145,16 @@
     }
     @keyframes fadePulseSwipe {
         0% {
-            opacity: 0.2;
-            transform: translateX(-35px) scale(0.9);
+            opacity: 0.05;
+            transform: translateX(-35px) scale(0.85);
         }
         50% {
-            opacity: 0.9;
-            transform: translateX(5px);
+            opacity: 0.85;
+            transform: translateX(5px) scale(0.9);
         }
         100% {
-            opacity: 0.2;
-            transform: translateX(-35px) scale(0.9);
+            opacity: 0.05;
+            transform: translateX(-35px) scale(0.85);
         }
     }
     .swipeImg {
@@ -160,9 +166,13 @@
 
     .projectTitle {
         transform: translateX(0px);
+
+        position: relative;
+        top: 5px;
     }
 
     .projectSlideLogo {
+        filter: drop-shadow(2px 4px 6px black);
         width: 50px;
         left: 0;
         margin-right: 3px;
@@ -215,12 +225,20 @@
     }
 
     .projetNbr {
+        opacity: 1;
+        color: #e1e1e1;
         font-size: 1em;
         margin-block-start: 5px;
     }
 
     .projetSlideTitle {
         font-size: 1.5em;
+        /* text-shadow: 0px 0px 5px black; */
+        text-shadow: 2px 0px 3px black;
+    }
+
+    .projetTitleSF-mobile {
+        font-size: 1.7em;
     }
 
     .accueilGrid2 {
@@ -663,6 +681,33 @@
         }
     }
 
+
+    .projectDescriptionWrapper {
+
+        overflow: hidden;
+
+        /* background-color: #171b258f; */
+        background: -moz-linear-gradient(180deg, rgba(23,27,37,0.2) 0%, rgba(255,255,255,0) 100%);
+        background: -webkit-linear-gradient(180deg, rgba(23,27,37,0.2) 0%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(180deg, rgba(23,27,37,0.2) 0%, rgba(255,255,255,0) 100%);
+
+        padding: 7px 0px 6px 0px;
+        margin-bottom: 14px;
+
+        backdrop-filter: blur(3px);
+
+        border-radius: 10px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+
+        border-left: 2px solid #00000052;
+        border-right: 2px solid #00000052;
+        border-top: 2px solid #00000052;
+        /* border-bottom: 2px solid #00000052; */
+    }
+
+
+
     .splide__pagination {
         display: none;
         bottom: -24px;
@@ -693,10 +738,22 @@
     }
 
     .topLeftBgMobile {
-        left: 0px;
-        top: -7px;
-        /* width: 349px; */
-        width: 96vw;
+        border-top-left-radius: 11px;
+        border-top-right-radius: 7px;
+
+        /* ANICENNE VERSION STYLEE */
+        /* left: 0px;
+        width: 100%;
+        top: -7px; */
+        left: -45px;
+        width: 115%;
+        top: -40px;
+
+
+        
+
+        /* oulah: +ram */
+        filter: saturate(1.08);
 
         animation: fadeInBgProject 1s 0.2s linear forwards !important;
     }
@@ -706,7 +763,7 @@
             opacity: 0;
         }
         to {
-            opacity: 0.15;
+            opacity: 0.95;
         }
     }
     
@@ -840,6 +897,17 @@
         margin-top: 0px;
     }
 
+
+    .projectDescriptionHeader { 
+        background-color: #171b2500;
+        padding: 1px 0px 0px 0px;
+
+        /* Test pour rendre SquadForge lisible */
+        backdrop-filter: blur(12px);
+
+        border: 0px;
+    }
+
     .projetSkillsList {
         gap: 1px;
         width: 95%;
@@ -847,13 +915,13 @@
         margin-block-start: 0em;
         margin-block-end: 0em;
 
-        background-color: #181c26;
-        padding: 10px 0px;
-        border-radius: 13px;
+        /* background-color: #181c26; */
+        /* padding: 10px 0px;
+        border-radius: 13px; */
     }
     .projetSkillsList1 {
-        border-left: 1px solid #f97b2b80;
-        border-right: 1px solid #f97b2b80;
+        /* border-left: 1px solid #f97b2b80;
+        border-right: 1px solid #f97b2b80; */
     }
     swiper-container {
         /* height: 19vh; */
@@ -880,7 +948,7 @@
 
         line-height: 1.15em;
 
-        padding-inline-start: 34px;
+        padding-inline-start: 31px;
 
         font-size: 0.92em;
         color: #ffffffed;
@@ -889,6 +957,20 @@
 
         min-width: 0px;
         padding-right: 0px;
+
+        background: rgb(14,14,14);
+        background: -moz-linear-gradient(180deg, rgba(14,14,14,0.5) 0%, rgba(255,255,255,0) 100%);
+        background: -webkit-linear-gradient(180deg, rgba(14,14,14,0.5) 0%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(180deg, rgba(14,14,14,0.5) 0%, rgba(255,255,255,0) 100%);
+        /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0e0e0e",endColorstr="#ffffff",GradientType=1); */
+
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-block-end: 0;
+
+        border-radius: 11px;
+        margin-left: 8px;
+        margin-right: 8px;
     }
 
     .projectSlideLogo3 {
@@ -914,6 +996,7 @@
     /* Pour centrer */
     .projetFuncListPositionMobile {
         width: 92%;
+        backdrop-filter: blur(17px);
     }
 
     .projetSlideTitleTerrine {
@@ -929,6 +1012,7 @@
 
     .projetSkillsList li {
         margin: 3px 3px;
+        border: 1px solid #0000006e;
     }
 
     .projetFuncList li {
@@ -2003,7 +2087,7 @@
         transition: all 0.5s;
     }
     #pageContainerProjet {
-        margin-top: 28px !important;
+        margin-top: 21px !important;
 
         transition: all 0.5s;
     }
